# hello_world

./: .gitignore  README.md
main/: CMakeLists.txt  GetPath.py  main.c  readme.txt
main/APP/: app.c  app.h
main/APP/TEST/: test.c  test.h
main/HARDWARE/IIC/: iic.c  iic.h
main/HARDWARE/LCD/: lcd.c  lcd.h
main/HARDWARE/LED/: led.c  led.h
main/HARDWARE/SPI/: spi.c  spi.h
main/HARDWARE/TIMER/: timer.c  timer.h
main/HARDWARE/TOUCH/: touch.c  touch.h
main/LVGL/: lv_conf.h
main/LVGL/examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c  lv_port_indev_template.h
main/SYSTEM/SYS/: sys.c  sys.h
