idf_component_register(
    SRCS
        "./main.c"
        "./HARDWARE/LED/led.c"
        "./HARDWARE/TOUCH/touch.c"
        "./HARDWARE/TIMER/timer.c"
        "./HARDWARE/IIC/iic.c"
        "./HARDWARE/SPI/spi.c"
        "./HARDWARE/LCD/lcd.c"
        "./APP/app.c"
        "./APP/TEST/test.c"
        "./SYSTEM/SYS/sys.c"
        "./LVGL/examples/porting/lv_port_disp_template.c"
        "./LVGL/examples/porting/lv_port_fs_template.c"
        "./LVGL/examples/porting/lv_port_indev_template.c"
        "./LVGL/demos/benchmark/lv_demo_benchmark.c"
        "./LVGL/demos/benchmark/assets/img_benchmark_cogwheel_chroma_keyed.c"
        "./LVGL/demos/benchmark/assets/img_benchmark_cogwheel_alpha16.c"
        "./LVGL/demos/benchmark/assets/img_benchmark_cogwheel_indexed16.c"
        "./LVGL/demos/benchmark/assets/lv_font_bechmark_montserrat_16_compr_az.c.c"
        "./LVGL/demos/benchmark/assets/lv_font_bechmark_montserrat_12_compr_az.c.c"
        "./LVGL/demos/benchmark/assets/img_benchmark_cogwheel_rgb.c"
        "./LVGL/demos/benchmark/assets/img_benchmark_cogwheel_argb.c"
        "./LVGL/demos/benchmark/assets/lv_font_bechmark_montserrat_28_compr_az.c.c"
        "./LVGL/demos/music/lv_demo_music_list.c"
        "./LVGL/demos/music/lv_demo_music_main.c"
        "./LVGL/demos/music/lv_demo_music.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_slider_knob_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_list_border_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_1.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_list_play_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_next.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_1.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_logo.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_corner_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_list_border.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_loop_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_prev_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_4_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_next_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_wave_top.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_2.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_corner_right_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_2.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_list_play.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_play_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_pause_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_loop.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_corner_right.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_pause.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_2_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_list_pause.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_2_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_rnd_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_3.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_3.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_3_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_rnd.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_list_pause_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_corner_left.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_3_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_corner_left_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_prev.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_1_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_icon_4.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_btn_play.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_cover_1_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_wave_bottom.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_wave_bottom_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_wave_top_large.c"
        "./LVGL/demos/music/assets/img_lv_demo_music_slider_knob.c"
        "./LVGL/demos/keypad_encoder/lv_demo_keypad_encoder.c"
        "./LVGL/demos/widgets/lv_demo_widgets.c"
        "./LVGL/demos/widgets/assets/img_clothes.c"
        "./LVGL/demos/widgets/assets/img_lvgl_logo.c"
        "./LVGL/demos/widgets/assets/img_demo_widgets_avatar.c"
        "./LVGL/demos/stress/lv_demo_stress.c"
        "./LVGL/demos/stress/assets/lv_font_montserrat_12_compr_az.c"
        "./LVGL/demos/stress/assets/lv_font_montserrat_28_compr_az.c"
        "./LVGL/demos/stress/assets/lv_font_montserrat_16_compr_az.c"
        "./LVGL/src/misc/lv_utils.c"
        "./LVGL/src/misc/lv_txt.c"
        "./LVGL/src/misc/lv_anim_timeline.c"
        "./LVGL/src/misc/lv_style.c"
        "./LVGL/src/misc/lv_style_gen.c"
        "./LVGL/src/misc/lv_mem.c"
        "./LVGL/src/misc/lv_fs.c"
        "./LVGL/src/misc/lv_txt_ap.c"
        "./LVGL/src/misc/lv_color.c"
        "./LVGL/src/misc/lv_ll.c"
        "./LVGL/src/misc/lv_log.c"
        "./LVGL/src/misc/lv_area.c"
        "./LVGL/src/misc/lv_lru.c"
        "./LVGL/src/misc/lv_timer.c"
        "./LVGL/src/misc/lv_async.c"
        "./LVGL/src/misc/lv_templ.c"
        "./LVGL/src/misc/lv_printf.c"
        "./LVGL/src/misc/lv_tlsf.c"
        "./LVGL/src/misc/lv_math.c"
        "./LVGL/src/misc/lv_anim.c"
        "./LVGL/src/misc/lv_gc.c"
        "./LVGL/src/misc/lv_bidi.c"
        "./LVGL/src/core/lv_indev.c"
        "./LVGL/src/core/lv_theme.c"
        "./LVGL/src/core/lv_disp.c"
        "./LVGL/src/core/lv_obj_class.c"
        "./LVGL/src/core/lv_refr.c"
        "./LVGL/src/core/lv_event.c"
        "./LVGL/src/core/lv_obj_draw.c"
        "./LVGL/src/core/lv_obj.c"
        "./LVGL/src/core/lv_obj_style_gen.c"
        "./LVGL/src/core/lv_obj_style.c"
        "./LVGL/src/core/lv_group.c"
        "./LVGL/src/core/lv_indev_scroll.c"
        "./LVGL/src/core/lv_obj_pos.c"
        "./LVGL/src/core/lv_obj_tree.c"
        "./LVGL/src/core/lv_obj_scroll.c"
        "./LVGL/src/hal/lv_hal_tick.c"
        "./LVGL/src/hal/lv_hal_indev.c"
        "./LVGL/src/hal/lv_hal_disp.c"
        "./LVGL/src/extra/lv_extra.c"
        "./LVGL/src/extra/others/snapshot/lv_snapshot.c"
        "./LVGL/src/extra/others/gridnav/lv_gridnav.c"
        "./LVGL/src/extra/others/monkey/lv_monkey.c"
        "./LVGL/src/extra/libs/ffmpeg/lv_ffmpeg.c"
        "./LVGL/src/extra/libs/sjpg/tjpgd.c"
        "./LVGL/src/extra/libs/sjpg/lv_sjpg.c"
        "./LVGL/src/extra/libs/freetype/lv_freetype.c"
        "./LVGL/src/extra/libs/png/lv_png.c"
        "./LVGL/src/extra/libs/png/lodepng.c"
        "./LVGL/src/extra/libs/qrcode/lv_qrcode.c"
        "./LVGL/src/extra/libs/qrcode/qrcodegen.c"
        "./LVGL/src/extra/libs/rlottie/lv_rlottie.c"
        "./LVGL/src/extra/libs/fsdrv/lv_fs_stdio.c"
        "./LVGL/src/extra/libs/fsdrv/lv_fs_posix.c"
        "./LVGL/src/extra/libs/fsdrv/lv_fs_fatfs.c"
        "./LVGL/src/extra/libs/fsdrv/lv_fs_win32.c"
        "./LVGL/src/extra/libs/bmp/lv_bmp.c"
        "./LVGL/src/extra/libs/gif/lv_gif.c"
        "./LVGL/src/extra/libs/gif/gifdec.c"
        "./LVGL/src/extra/layouts/flex/lv_flex.c"
        "./LVGL/src/extra/layouts/grid/lv_grid.c"
        "./LVGL/src/extra/themes/basic/lv_theme_basic.c"
        "./LVGL/src/extra/themes/default/lv_theme_default.c"
        "./LVGL/src/extra/themes/mono/lv_theme_mono.c"
        "./LVGL/src/extra/widgets/calendar/lv_calendar_header_dropdown.c"
        "./LVGL/src/extra/widgets/calendar/lv_calendar_header_arrow.c"
        "./LVGL/src/extra/widgets/calendar/lv_calendar.c"
        "./LVGL/src/extra/widgets/led/lv_led.c"
        "./LVGL/src/extra/widgets/win/lv_win.c"
        "./LVGL/src/extra/widgets/chart/lv_chart.c"
        "./LVGL/src/extra/widgets/spinbox/lv_spinbox.c"
        "./LVGL/src/extra/widgets/imgbtn/lv_imgbtn.c"
        "./LVGL/src/extra/widgets/spinner/lv_spinner.c"
        "./LVGL/src/extra/widgets/tabview/lv_tabview.c"
        "./LVGL/src/extra/widgets/msgbox/lv_msgbox.c"
        "./LVGL/src/extra/widgets/span/lv_span.c"
        "./LVGL/src/extra/widgets/colorwheel/lv_colorwheel.c"
        "./LVGL/src/extra/widgets/list/lv_list.c"
        "./LVGL/src/extra/widgets/menu/lv_menu.c"
        "./LVGL/src/extra/widgets/animimg/lv_animimg.c"
        "./LVGL/src/extra/widgets/meter/lv_meter.c"
        "./LVGL/src/extra/widgets/tileview/lv_tileview.c"
        "./LVGL/src/extra/widgets/keyboard/lv_keyboard.c"
        "./LVGL/src/font/lv_font_montserrat_28_compressed.c"
        "./LVGL/src/font/lv_font_montserrat_10.c"
        "./LVGL/src/font/lv_font_montserrat_14.c"
        "./LVGL/src/font/lv_font_unscii_8.c"
        "./LVGL/src/font/lv_font_montserrat_40.c"
        "./LVGL/src/font/lv_font_montserrat_44.c"
        "./LVGL/src/font/lv_font_loader.c"
        "./LVGL/src/font/lv_font_dejavu_16_persian_hebrew.c"
        "./LVGL/src/font/lv_font_montserrat_36.c"
        "./LVGL/src/font/lv_font_montserrat_38.c"
        "./LVGL/src/font/lv_font_montserrat_32.c"
        "./LVGL/src/font/lv_font_montserrat_28.c"
        "./LVGL/src/font/lv_font_montserrat_22.c"
        "./LVGL/src/font/lv_font_montserrat_26.c"
        "./LVGL/src/font/lv_font_montserrat_18.c"
        "./LVGL/src/font/lv_font_montserrat_12.c"
        "./LVGL/src/font/lv_font_fmt_txt.c"
        "./LVGL/src/font/lv_font_montserrat_16.c"
        "./LVGL/src/font/lv_font_montserrat_48.c"
        "./LVGL/src/font/lv_font_montserrat_42.c"
        "./LVGL/src/font/lv_font_montserrat_46.c"
        "./LVGL/src/font/lv_font.c"
        "./LVGL/src/font/lv_font_unscii_16.c"
        "./LVGL/src/font/lv_font_montserrat_34.c"
        "./LVGL/src/font/lv_font_montserrat_30.c"
        "./LVGL/src/font/lv_font_montserrat_20.c"
        "./LVGL/src/font/lv_font_simsun_16_cjk.c"
        "./LVGL/src/font/lv_font_montserrat_24.c"
        "./LVGL/src/font/lv_font_montserrat_12_subpx.c"
        "./LVGL/src/draw/lv_draw_line.c"
        "./LVGL/src/draw/lv_draw_triangle.c"
        "./LVGL/src/draw/lv_img_decoder.c"
        "./LVGL/src/draw/lv_draw_arc.c"
        "./LVGL/src/draw/lv_draw_rect.c"
        "./LVGL/src/draw/lv_draw_img.c"
        "./LVGL/src/draw/lv_img_cache.c"
        "./LVGL/src/draw/lv_draw_mask.c"
        "./LVGL/src/draw/lv_draw_label.c"
        "./LVGL/src/draw/lv_draw.c"
        "./LVGL/src/draw/lv_img_buf.c"
        "./LVGL/src/draw/sw/lv_draw_sw_blend.c"
        "./LVGL/src/draw/sw/lv_draw_sw_img.c"
        "./LVGL/src/draw/sw/lv_draw_sw_arc.c"
        "./LVGL/src/draw/sw/lv_draw_sw_gradient.c"
        "./LVGL/src/draw/sw/lv_draw_sw.c"
        "./LVGL/src/draw/sw/lv_draw_sw_rect.c"
        "./LVGL/src/draw/sw/lv_draw_sw_letter.c"
        "./LVGL/src/draw/sw/lv_draw_sw_polygon.c"
        "./LVGL/src/draw/sw/lv_draw_sw_line.c"
        "./LVGL/src/draw/sw/lv_draw_sw_dither.c"
        "./LVGL/src/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c"
        "./LVGL/src/draw/nxp_pxp/lv_gpu_nxp_pxp_osa.c"
        "./LVGL/src/draw/nxp_pxp/lv_gpu_nxp_pxp.c"
        "./LVGL/src/draw/nxp_vglite/lv_gpu_nxp_vglite.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_bg.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_rect.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_img.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_texture_cache.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_utils.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_label.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_polygon.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_arc.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_composite.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_line.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_mask.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl_stack_blur.c"
        "./LVGL/src/draw/sdl/lv_draw_sdl.c"
        "./LVGL/src/widgets/lv_label.c"
        "./LVGL/src/widgets/lv_roller.c"
        "./LVGL/src/widgets/lv_btn.c"
        "./LVGL/src/widgets/lv_textarea.c"
        "./LVGL/src/widgets/lv_btnmatrix.c"
        "./LVGL/src/widgets/lv_img.c"
        "./LVGL/src/widgets/lv_slider.c"
        "./LVGL/src/widgets/lv_dropdown.c"
        "./LVGL/src/widgets/lv_bar.c"
        "./LVGL/src/widgets/lv_table.c"
        "./LVGL/src/widgets/lv_arc.c"
        "./LVGL/src/widgets/lv_line.c"
        "./LVGL/src/widgets/lv_checkbox.c"
        "./LVGL/src/widgets/lv_switch.c"
        "./LVGL/src/widgets/lv_canvas.c"
        "./LVGL/src/widgets/lv_objx_templ.c"

    INCLUDE_DIRS
        "./HARDWARE/LED"
        "./HARDWARE/TOUCH"
        "./HARDWARE/TIMER"
        "./HARDWARE/IIC"
        "./HARDWARE/SPI"
        "./HARDWARE/LCD"
        "./APP"
        "./APP/TEST"
        "./SYSTEM/SYS"
        "./LVGL"
        "./LVGL/examples/porting"
        "./LVGL/demos"
        "./LVGL/demos/benchmark"
        "./LVGL/demos/music"
        "./LVGL/demos/music/assets"
        "./LVGL/demos/keypad_encoder"
        "./LVGL/demos/widgets"
        "./LVGL/demos/stress"
        "./LVGL/src"
        "./LVGL/src/misc"
        "./LVGL/src/core"
        "./LVGL/src/hal"
        "./LVGL/src/extra"
        "./LVGL/src/extra/others"
        "./LVGL/src/extra/others/snapshot"
        "./LVGL/src/extra/others/gridnav"
        "./LVGL/src/extra/others/monkey"
        "./LVGL/src/extra/libs"
        "./LVGL/src/extra/libs/ffmpeg"
        "./LVGL/src/extra/libs/sjpg"
        "./LVGL/src/extra/libs/freetype"
        "./LVGL/src/extra/libs/png"
        "./LVGL/src/extra/libs/qrcode"
        "./LVGL/src/extra/libs/rlottie"
        "./LVGL/src/extra/libs/fsdrv"
        "./LVGL/src/extra/libs/bmp"
        "./LVGL/src/extra/libs/gif"
        "./LVGL/src/extra/layouts"
        "./LVGL/src/extra/layouts/flex"
        "./LVGL/src/extra/layouts/grid"
        "./LVGL/src/extra/themes"
        "./LVGL/src/extra/themes/basic"
        "./LVGL/src/extra/themes/default"
        "./LVGL/src/extra/themes/mono"
        "./LVGL/src/extra/widgets"
        "./LVGL/src/extra/widgets/calendar"
        "./LVGL/src/extra/widgets/led"
        "./LVGL/src/extra/widgets/win"
        "./LVGL/src/extra/widgets/chart"
        "./LVGL/src/extra/widgets/spinbox"
        "./LVGL/src/extra/widgets/imgbtn"
        "./LVGL/src/extra/widgets/spinner"
        "./LVGL/src/extra/widgets/tabview"
        "./LVGL/src/extra/widgets/msgbox"
        "./LVGL/src/extra/widgets/span"
        "./LVGL/src/extra/widgets/colorwheel"
        "./LVGL/src/extra/widgets/list"
        "./LVGL/src/extra/widgets/menu"
        "./LVGL/src/extra/widgets/animimg"
        "./LVGL/src/extra/widgets/meter"
        "./LVGL/src/extra/widgets/tileview"
        "./LVGL/src/extra/widgets/keyboard"
        "./LVGL/src/font"
        "./LVGL/src/draw"
        "./LVGL/src/draw/sw"
        "./LVGL/src/draw/stm32_dma2d"
        "./LVGL/src/draw/nxp_pxp"
        "./LVGL/src/draw/nxp_vglite"
        "./LVGL/src/draw/sdl"
        "./LVGL/src/widgets"
)